added Rating field

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcAppContext": "Server=(localdb)\\mssqllocaldb;Database=MvcAppContext-fcf6b523-3843-4733-87c4-1146b9a74fd2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
